k8s/dev/NetflixFrontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-frontend
  labels:
    app: netflix-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix-frontend
  template:
    metadata:
      labels:
        app: netflix-frontend
    spec:
      containers:
        - name: server
          image: ofekhalabi/netflix-frontend-dev:v1.0.6
---
apiVersion: v1
kind: Service
metadata:
  name: netflix-frontend-service
spec:
  selector:
    app: netflix-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  template:
    spec:
      containers:
        - image: ofekhalabi/netflix-frontend-dev:v1.0.6
