k8s/dev/NetflixFrontend/IngressNginx.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-dev
spec:
  ingressClassName: nginx
  rules:
    - host: ofekh-netflix.dev.devops-int-college.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: netflix-frontend-service-dev
              port:
                number: 3000
